--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.0",
-    "gulp-uglify": "^2.0.0"
+    "gulp-if": "^2.0.1",
+    "gulp-livereload": "^3.8.1",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^2.0.0",
+    "gulp-useref": "^3.1.0"
   },
   "dependencies": {
     "amazeui-react": "^1.2.2"
