--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "gulp-livereload": "^3.8.1",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
-    "gulp-useref": "^3.1.0"
+    "gulp-useref": "^3.1.0",
+    "st": "^1.2.0"
   },
   "dependencies": {
     "amazeui-react": "^1.2.2"
