--- a/package.json
+++ b/package.json
@@ -23,12 +23,11 @@
     "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.1",
     "gulp-livereload": "^3.8.1",
+    "gulp-react": "^3.1.0",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.0",
     "st": "^1.2.0"
   },
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
