--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.0",
+    "jsx-loader": "^0.13.2",
     "st": "^1.2.0"
   },
   "dependencies": {}
