** webpack-learn loader

--- a/webpack-learn/package.json
+++ b/webpack-learn/package.json
@@ -2,10 +2,13 @@
   "name": "webpack-learn",
   "version": "1.0.0",
   "description": "",
-  "main": "entry.js",
+  "main": "bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "webpack"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
