--- a/webpack-learn/package.json
+++ b/webpack-learn/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "css-loader": "^0.25.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.1"
   }
 }
