--- a/webpack-learn/package.json
+++ b/webpack-learn/package.json
@@ -12,9 +12,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
     "css-loader": "^0.25.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.13.0",
+    "jquery": "^3.1.0"
   }
 }
