--- a/webpack-learn/package.json
+++ b/webpack-learn/package.json
@@ -21,6 +21,7 @@
     "webpack-dev-server": "^1.15.1"
   },
   "dependencies": {
+    "angular": "^1.5.8",
     "babel-polyfill": "^6.13.0",
     "jquery": "^3.1.0"
   }
