--- a/webpack-learn/package.json
+++ b/webpack-learn/package.json
@@ -21,7 +21,12 @@
     "webpack-dev-server": "^1.15.1"
   },
   "dependencies": {
+    "alertifyjs": "^1.8.0",
     "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
+    "angular-local-storage": "^0.5.0",
+    "angular-route": "^1.5.8",
     "babel-polyfill": "^6.13.0",
     "jquery": "^3.1.0"
   }
