使用sass-loader去编译.scss文件

--- a/webpack-learn/package.json
+++ b/webpack-learn/package.json
@@ -18,7 +18,9 @@
     "css-loader": "^0.25.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.22.0",
+    "node-sass": "^3.10.1",
     "raw-loader": "^0.5.1",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
