--- a/webpack-learn/package.json
+++ b/webpack-learn/package.json
@@ -16,12 +16,16 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "css-loader": "^0.25.0",
+    "file-loader": "^0.9.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.22.0",
+    "img-loader": "^1.3.1",
     "node-sass": "^3.10.1",
     "raw-loader": "^0.5.1",
+    "resolve-url-loader": "^1.6.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2"
   },
