--- a/gulp/package.json
+++ b/gulp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-gulp-demo",
+  "name": "gulp-demo",
   "version": "1.0.0",
   "description": "a porject of angular,gulp,",
   "main": "index.js",
@@ -17,36 +17,8 @@
   },
   "homepage": "https://github.com/dirkliu/angular-gulp-demo#readme",
   "devDependencies": {
-    "babel-cli": "^6.14.0",
-    "jsx-loader": "^0.13.2",
-    "st": "^1.2.0",
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
-    "css-loader": "^0.25.0",
-    "file-loader": "^0.9.0",
-    "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.22.0",
-    "img-loader": "^1.3.1",
-    "node-sass": "^3.10.1",
-    "raw-loader": "^0.5.1",
-    "resolve-url-loader": "^1.6.0",
-    "sass-loader": "^4.0.2",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.2"
-  },
-  "dependencies": {
-    "alertifyjs": "^1.8.0",
-    "angular": "^1.5.8",
-    "angular-animate": "^1.5.8",
-    "angular-aria": "^1.5.8",
-    "angular-local-storage": "^0.5.0",
-    "angular-route": "^1.5.8",
-    "babel-polyfill": "^6.13.0",
-    "jquery": "^3.1.0",
 
+    "st": "^1.2.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
@@ -57,5 +29,8 @@
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.0"
+
+  },
+  "dependencies": {
   }
 }
