--- a/webpack/package.json
+++ b/webpack/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-gulp-demo",
+  "name": "webpack-demo",
   "version": "1.0.0",
   "description": "a porject of angular,gulp,",
   "main": "index.js",
@@ -19,7 +19,6 @@
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "jsx-loader": "^0.13.2",
-    "st": "^1.2.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
@@ -45,17 +44,6 @@
     "angular-local-storage": "^0.5.0",
     "angular-route": "^1.5.8",
     "babel-polyfill": "^6.13.0",
-    "jquery": "^3.1.0",
-
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-if": "^2.0.1",
-    "gulp-livereload": "^3.8.1",
-    "gulp-react": "^3.1.0",
-    "gulp-sass": "^2.3.2",
-    "gulp-uglify": "^2.0.0",
-    "gulp-useref": "^3.1.0"
+    "jquery": "^3.1.0"
   }
 }
