--- a/gulp/package.json
+++ b/gulp/package.json
@@ -17,8 +17,6 @@
   },
   "homepage": "https://github.com/dirkliu/angular-gulp-demo#readme",
   "devDependencies": {
-
-    "st": "^1.2.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
@@ -28,9 +26,7 @@
     "gulp-react": "^3.1.0",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
-    "gulp-useref": "^3.1.0"
-
+    "st": "^1.2.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
