--- a/webpack/package.json
+++ b/webpack/package.json
@@ -18,7 +18,6 @@
   "homepage": "https://github.com/dirkliu/angular-gulp-demo#readme",
   "devDependencies": {
     "babel-cli": "^6.14.0",
-    "jsx-loader": "^0.13.2",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
@@ -27,6 +26,8 @@
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.22.0",
     "img-loader": "^1.3.1",
+    "jsx-loader": "^0.13.2",
+    "manifest-revision-webpack-plugin": "^0.3.0",
     "node-sass": "^3.10.1",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^1.6.0",
@@ -37,13 +38,5 @@
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
-    "alertifyjs": "^1.8.0",
-    "angular": "^1.5.8",
-    "angular-animate": "^1.5.8",
-    "angular-aria": "^1.5.8",
-    "angular-local-storage": "^0.5.0",
-    "angular-route": "^1.5.8",
-    "babel-polyfill": "^6.13.0",
-    "jquery": "^3.1.0"
   }
 }
