--- a/react/package.json
+++ b/react/package.json
@@ -15,9 +15,14 @@
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-env": "^1.1.4",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "html-webpack-plugin": "^2.24.1",
     "rimraf": "^2.5.4",
     "webpack": "^1.14.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
+  }
 }
