--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
-  "name": "react-demo",
+  "name": "gulp-demo",
   "version": "1.0.0",
-  "description": "A demo of react.js",
+  "description": "a gulp build demo",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --port 8000 --inline"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "react"
-  ],
-  "author": "7ge",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dirkliu/angular-gulp-demo.git"
+  },
+  "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-env": "^1.1.4",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "html-webpack-plugin": "^2.24.1",
-    "rimraf": "^2.5.4",
-    "webpack": "^1.14.0"
+  "bugs": {
+    "url": "https://github.com/dirkliu/angular-gulp-demo/issues"
   },
-  "dependencies": {
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1"
-  }
+  "homepage": "https://github.com/dirkliu/angular-gulp-demo#readme",
+  "devDependencies": {
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-connect": "^5.0.0",
+    "gulp-if": "^2.0.1",
+    "gulp-open": "^2.0.0",
+    "gulp-react": "^3.1.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^2.0.0",
+    "st": "^1.2.0"
+  },
+  "dependencies": {}
 }
