--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "webpack": "^1.14.0"
   },
   "dependencies": {
+    "antd": "^2.6.0",
+    "css-loader": "^0.26.1",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "style-loader": "^0.13.1"
   }
 }
