--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "css-loader": "^0.26.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "style-loader": "^0.13.1"
+    "style-loader": "^0.13.1",
+    "whatwg-fetch": "^2.0.3"
   }
 }
