--- a/webpack-learn/package.json
+++ b/webpack-learn/package.json
@@ -21,7 +21,7 @@
     "babel-cli": "^6.14.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-env": "^1.4.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.4",
