--- a/webpack-learn/package.json
+++ b/webpack-learn/package.json
@@ -28,6 +28,7 @@
     "html-webpack-plugin": "^2.22.0",
     "img-loader": "^1.3.1",
     "jsx-loader": "^0.13.2",
+    "lodash": "^4.17.4",
     "manifest-revision-webpack-plugin": "^0.3.0",
     "node-sass": "^3.10.1",
     "raw-loader": "^0.5.1",
