--- a/gulp-learn/package.json
+++ b/gulp-learn/package.json
@@ -27,6 +27,7 @@
     "gulp-react": "^3.1.0",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
+    "http-proxy-middleware": "^0.17.4",
     "st": "^1.2.0"
   },
   "dependencies": {}
