--- a/gulp-learn/package.json
+++ b/gulp-learn/package.json
@@ -25,6 +25,7 @@
     "gulp-if": "^2.0.1",
     "gulp-open": "^2.0.0",
     "gulp-react": "^3.1.0",
+    "gulp-rev": "^8.0.0",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
     "http-proxy-middleware": "^0.17.4",
