--- a/webpack/package.json
+++ b/webpack/package.json
@@ -1,46 +1,17 @@
 {
-  "name": "webpack-demo",
+  "name": "webpack",
   "version": "1.0.0",
-  "description": "a porject of angular,gulp,",
-  "main": "index.js",
+  "description": "webpack build demos",
+  "priovate": true,
   "scripts": {
-    "build": "rimraf dist && webpack --config webpack.config.build.js",
-    "dev": "webpack-dev-server --config webpack.config.dev.js --inline"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack -v"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dirkliu/angular-gulp-demo.git"
-  },
-  "author": "",
+  "author": "dirkliu",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dirkliu/angular-gulp-demo/issues"
-  },
-  "homepage": "https://github.com/dirkliu/angular-gulp-demo#readme",
   "devDependencies": {
-    "babel-cli": "^6.14.0",
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-env": "^1.4.0",
-    "css-loader": "^0.25.0",
-    "file-loader": "^0.9.0",
-    "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.22.0",
-    "img-loader": "^1.3.1",
-    "jsx-loader": "^0.13.2",
-    "lodash": "^4.17.4",
-    "manifest-revision-webpack-plugin": "^0.3.0",
-    "node-sass": "^4.14.1",
-    "raw-loader": "^0.5.1",
-    "resolve-url-loader": "^1.6.0",
-    "rimraf": "^2.5.4",
-    "sass-loader": "^10.0.2",
-    "shelljs": "^0.7.5",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
+    "lodash": "^4.17.20",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
-  },
-  "dependencies": {}
+    "webpack-cli": "^3.3.12"
+  }
 }
