add babel, 切换到yarn

--- a/browserify/package.json
+++ b/browserify/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "browserify",
+  "name": "browserify-learn",
   "version": "1.0.0",
-  "description": "browserify 构建工具 demo",
+  "description": "broswerify-learn demos",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "browserify": "^16.5.2"
   }
