--- a/rollup/package.json
+++ b/rollup/package.json
@@ -1,11 +1,10 @@
 {
   "name": "rollup-learn",
   "version": "1.0.0",
-  "description": "",
+  "description": "rollup learn, demos",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+  "license": "MIT",
+  "devDependencies": {
+    "rollup": "^2.26.11"
+  }
 }
