--- a/rollup/package.json
+++ b/rollup/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "rollup": "^2.26.11"
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "rollup": "^2.26.11",
+    "rollup-plugin-babel": "^4.4.0"
   }
 }
