--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -4,7 +4,7 @@
       "noImplicitAny": true,
       "removeComments": true,
       "preserveConstEnums": true,
-      "outFile": "dist/greater.js",
+      "outFile": "dist/main.js",
       "sourceMap": true
   },
   "include": [
