--- a/webpack/package.json
+++ b/webpack/package.json
@@ -5,9 +5,14 @@
   "main": "index.js",
   "author": "Jason",
   "license": "MIT",
+  "scripts": {
+    "build": "webpack"
+  },
   "devDependencies": {
-    "lodash": "^4.17.20",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.28.0",
+    "webpack-cli": "^4.5.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
