--- a/rollup/package.json
+++ b/rollup/package.json
@@ -12,5 +12,6 @@
     "@babel/preset-env": "^7.11.5",
     "rollup": "^2.26.11",
     "rollup-plugin-babel": "^4.4.0"
-  }
+  },
+  "dependencies": {}
 }
