--- a/rollup/package.json
+++ b/rollup/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "node build.js"
+    "build": "rollup -c rollup.config.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "rollup": "^2.26.11",
-    "rollup-plugin-babel": "^4.4.0"
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@rollup/plugin-babel": "^5.3.0",
+    "rollup": "^2.45.1"
   },
   "dependencies": {}
 }
