--- a/rollup/package.json
+++ b/rollup/package.json
@@ -11,7 +11,8 @@
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@rollup/plugin-babel": "^5.3.0",
-    "rollup": "^2.45.1"
+    "rollup": "^2.45.1",
+    "rollup-pluginutils": "^2.8.2"
   },
   "dependencies": {}
 }
